border style color size

--- a/inline_css border.html
+++ b/inline_css border.html
@@ -5,10 +5,9 @@ Inline CSS
 </title>
 <body>
 
-<h1 style="color: red;">Inline CSS</h1>
-<h1 style="color: blue;">Inline CSS</h1>
+<h1 style="color: red;">Inline CSS BORDER STYLE COLOR SIZE</h1>
 
-<p style="border-style: solid;border-color:green">Welcome to CSS //solid</p>
+<p style="border-style: solid;border-color:green;border-width:thin;">Welcome to CSS //solid</p>
 
 <p style="border-style: dotted;border-color:orange">Welcome to CSS //dotted</p>
 
@@ -16,9 +15,9 @@ Inline CSS
 
 <p style="border-style: ridge; border-color:red;">Welcome to CSS //ridge</p>
 
-<p style="border-style: inset;border-color:pink">Welcome to CSS //inset</p>
+<p style="border-style: inset;border-color:pink;border-width:medium;">Welcome to CSS //inset</p>
 
-<p style="border-style: outset;border-color:orange">Welcome to CSS //outset</p>
+<p style="border-style: outset;border-color:orange;border-width:thick;">Welcome to CSS //outset</p>
 
 
 
